# neoml_python

./: .gitignore
NeoML/: CMakeLists.txt
NeoML/Python/: CMakeLists.txt  setup.py
NeoML/Python/neoml/: Argmax.py  AttentionDecoder.py  Blob.py  ChannelwiseConv.py  ConcatChannels.py  Conv.py  DecisionTree.py  Dnn.py  Eltwise.py  FirstCome.py  FullyConnected.py  GradientBoost.py  Hierarchical.py  Initializer.py  IsoData.py  KMeans.py  Linear.py  Loss.py  Lstm.py  MathEngine.py  MultichannelLookup.py  OneVersusAll.py  Pooling.py  Random.py  ReLU.py  SVM.py  Sink.py  Solver.py  Source.py  Utils.py
NeoML/Python/test/: pyTorch.py  svml.py  test.py  test2.py  test_Blob.py  test_DecisionTreeClassifier.py  test_Dnn.py  test_Dnn_Seq2Seq.py  test_FirstCome.py  test_GradientBoostClassifier.py  test_GradientBoostRegressor.py  test_Hierarchical.py  test_IsoData.py  test_KMeans.py  test_LinearClassifier.py  test_LinearRegressor.py  test_OneVersusAll.py  test_SkLearnComparison.py  test_SvmClassifier.py
NeoML/Python/test/data/: dates.test.data  dates.test.label  dates.train.data  dates.train.label  iris.svml  news20bin.test.svml  news20bin.train.svml
NeoML/include/NeoML/: NeoMLCommon.h
NeoML/include/NeoML/Dnn/: Dnn.h
NeoML/src/Dnn/: Dnn.cpp
